# Weekly-report

./: README.md  create  ideas.md  life-hack.md  weekly.md
2023-10 至 2024-7 记录/: README.md
2023-10 至 2024-7 记录/code/15213/: CSAPP经典易错习题.md  弱项及Todo.md
2023-10 至 2024-7 记录/code/Bonn_CPP/assignments/hw1/task_2/: CMakeLists.txt  README.md  task2_note.md
2023-10 至 2024-7 记录/code/Bonn_CPP/assignments/hw3/: CMakeLists.txt
2023-10 至 2024-7 记录/code/Bonn_CPP/assignments/hw3/api/: html_writer.hpp  image_browser.hpp
2023-10 至 2024-7 记录/code/Bonn_CPP/assignments/hw3/include/: homework_3.h
2023-10 至 2024-7 记录/code/Bonn_CPP/assignments/hw3/src/: html_writer.cpp  main.cpp
2023-10 至 2024-7 记录/code/Bonn_CPP/assignments/hw5/: CMakeLists.txt  README.md
2023-10 至 2024-7 记录/code/CIS2400/: lectures.md
2023-10 至 2024-7 记录/code/cis1900/assignment/hw2/: CMakeLists.txt
2023-10 至 2024-7 记录/code/cis1900/assignment/hw2/include/: square.hpp
2023-10 至 2024-7 记录/code/cis1900/assignment/hw2/src/: main.cpp  shape.cpp  triangle.cpp
2023-10 至 2024-7 记录/code/gTest/: a.out
2023-10 至 2024-7 记录/computer science/: course.md  maydo.md
2023-10 至 2024-7 记录/tasks/C++/: Bonn_CPP.md  CIS1900.md
2023-10 至 2024-7 记录/week1/journal/: day2.md  day3.md  day4.md  day5.md  day6.md  day7.md
2023-10 至 2024-7 记录/week10/journal/: day7.md
2023-10 至 2024-7 记录/week11/journal/: day2.md  day5.md
2023-10 至 2024-7 记录/week12/journal/: day3.md  day4.md  day5.md  day7.md
2023-10 至 2024-7 记录/week13/journal/: day1.md  day2.md  day4.md
2023-10 至 2024-7 记录/week14/journal/: day5.md  day7.md
2023-10 至 2024-7 记录/week15/journal/: day1.md
2023-10 至 2024-7 记录/week17/journal/: day1.md  day7.md
2023-10 至 2024-7 记录/week18/journal/: day1.md  day2.md  day3.md  day4.md  day6.md
2023-10 至 2024-7 记录/week19/journal/: day2.md  day3.md  day7.md
2023-10 至 2024-7 记录/week2/journal/: day2.md  day5.md  day6.md
2023-10 至 2024-7 记录/week20/journal/: day2.md  day5.md  day6.md
2023-10 至 2024-7 记录/week21/journal/: day1.md  day5.md  day6.md
2023-10 至 2024-7 记录/week22/journal/: day2.md  day3.md  day4.md
2023-10 至 2024-7 记录/week23/journal/: day4.md
2023-10 至 2024-7 记录/week24/journal/: day2.md  day3.md
2023-10 至 2024-7 记录/week28/journal/: day1.md  day5.md
2023-10 至 2024-7 记录/week29/journal/: day2.md
2023-10 至 2024-7 记录/week3/journal/: day1.md  day3.md  day5.md  day7.md
2023-10 至 2024-7 记录/week30/journal/: day7.md
2023-10 至 2024-7 记录/week31/journal/: day7.md
2023-10 至 2024-7 记录/week4/journal/: day2.md  day5.md  day6.md
2023-10 至 2024-7 记录/week5/journal/: day3.md  day5.md  day7.md
2023-10 至 2024-7 记录/week6/journal/: day2.md  day7.md
2023-10 至 2024-7 记录/week7/journal/: day1.md  day3.md  day4.md  day6.md  day7.md
2023-10 至 2024-7 记录/week8/journal/: day3.md  day4.md
2023-10 至 2024-7 记录/week9/journal/: day4.md
Review/: 思想道德修养与法律基础复习.md
code/15213/: CSAPP经典习题.md  test.c  弱项及Todo.md
code/15213/Ch1-Intro/: add  add_test.cpp  mem  perf.cpp
code/15213/Ch2-Data-Rep/: hw.c  弱项及Todo.md
code/15213/Ch3 Machine Level Programming/: gdb-and-assembly.tar  machine-control.tar  machine-data.tar  mstore.s
code/15213/Intro/: README.md  mul_test.cpp
code/15213/lab实现总结/: Data lab 总结.md
code/Bonn_CPP/assignments/hw2/task_1/: CMakeLists.txt
code/Bonn_CPP/assignments/hw2/task_1/src/: main.cpp
code/Bonn_CPP/assignments/hw4/: CMakeLists.txt
code/Bonn_CPP/assignments/hw4/include/: homework_4.h
code/Bonn_CPP/assignments/hw4/src/: homework_4.cpp
code/Bonn_CPP/lectures/: lec1.md
code/CIS2400/: lectures.md  todo.md
code/CIT5950/: a.out  notes.md  test.cpp
code/CIT5950/Pipe/: connected_pipe.cc  multi_pipe  simple_pipe  simple_pipe.cc
code/CIT5950/multi-thread socket/: Makefile  client  server  server.hh
code/CIT5950/socket exercise/: server
code/CSE332/: schedule.md
code/cmake/: RAEDME.md
code/cmake/demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
code/cmake/demo2/: CMakeLists.txt
code/cmake/demo2/src/: main.cpp
code/cmake/demo3/: CMakeLists.txt
code/cmake/demo4/: CMakeLists.txt
code/cmake/demo4/include/shared/: greet.hh
code/cmake/demo4/src/: greet.cpp
code/cmake/demo5/: CMakeLists.txt
code/cmake/demo5/src/: main.cpp
code/gTest/: test.cpp
code/nfa/: Makefile  input.txt  main.cpp  nfa.cpp
code/snake/: LICENSE  game.cc  game.hh  game_init.cc
code/system_prog_exercise/: notes.md
code/system_prog_exercise/Concurrency/: README.md  thread.c
code/system_prog_exercise/Network/: curl
computer science/: course.md  goals.md  ideas.md  todo.md
fitness/: Goals & Todos.md
mathematics/: math.md  todo.md
mathematics/Calculus/: MIT Course Todos.md  Outline.md  compile
other/: course.md  goals.md  ideas.md  maydo.md
tasks/: course.md
week1/: CS368.md  day1.md  tasks.md
week1/code/dfa/: dfa.hh  (+1 more)
week1/journal/: day1.md  day4.md
week10/journal/: day2.md  day3.md  day4.md  day5.md
week11/journal/: day1.md  day3.md  day7.md
week12/journal/: day2.md
week13/journal/: day4.md
week14/journal/: day3.md  day4.md  day7.md
week15/journal/: day3.md  day4.md  day6.md  day7.md
week16/journal/: day4.md  day6.md
week17/journal/: day2.md  day3.md  day4.md  day5.md  day6.md  day7.md
week18/journal/: day7.md
week19/journal/: day1.md  day5.md  day6.md  day7.md
week2/journal/: day1.md  day3.md  day4.md  day6.md  day7.md
week2/tasks/: Bonn_CPP.md  CS368.md  course.md
week20/journal/: day3.md  day6.md
week21/journal/: day2.md  day3.md  day7.md
week22/journal/: day1.md  day5.md  day6.md
week24/journal/: day1.md  day3.md  day6.md
week28/journal/: day2.md  day3.md  day4.md  day7.md
week29/journal/: day3.md
week3/journal/: day1.md  day2.md  day3.md  day4.md  day6.md
week31/journal/: day4.md  day5.md  day6.md  day7.md
week32/journal/: day2.md  day3.md
week4/journal/: day1.md  day3.md  day4.md  day6.md
week5/journal/: day2.md  day4.md  day6.md
week6/journal/: day1.md  day4.md  day5.md  day6.md
week7/journal/: day1.md  day2.md  day5.md  day7.md
week8/journal/: day1.md  day2.md
week9/journal/: day2.md  day5.md  day7.md
(+352 files in other folders)
